Лаба 6. При запуске Launcher.java через кнопку - одно предупреждение. При запуске через терминал - ./gradlew run - никаких ошибок нет